<resources>
    <string name="app_name">Clayton</string>
    <string name="default_web_client_id">884230685423-39porea22rfv3a54jftk2th0n4utco7n.apps.googleusercontent.com</string>
    <string name="server_auth_endpoint">https://10.0.2.2:8000/api/authenticate</string>
    <string name="journal_tab_text">Journal</string>
    <string name="home_tab_text">Home</string>
    <string name="goals_tab_text">Goals</string>
    <string name="journal_switch_text">Journal</string>
    <string name="blurt_switch_text">Blurt</string>
    <string name="journal_hint_text">Write your journal entry here</string>
    <string name="journal_submit_text">Submit</string>
    <string name="journal_delete_text">Delete</string>
    <string name="journal_entry_header_text">Your Entries</string>
    <string-array name="stat_prompts">
        <item>Overall Tasks completed:</item>
        <item>Tasks Completed Today:</item>
        <item>Total Journal Entries Stored:</item>
        <item>Affirmation</item>
    </string-array>
    <string name="disclaimer_text">"Clayton is designed for entertainment purposes and to promote positive well-being. It is important to note that Clayton is not a substitute for professional mental health advice, diagnosis, or treatment. Users are encouraged to consult with qualified healthcare professionals for any concerns related to their mental health.

Important Points to Consider:

    Clayton is intended for entertainment and self-care purposes. While it may provide moments of relaxation and enjoyment, it is not a medical tool.

    The App does not provide medical or psychological advice, and it is not a replacement for professional mental health services. Users experiencing mental health challenges are strongly advised to seek the guidance of licensed mental health professionals.

    In the case of an emergency or if you are in crisis, do not rely on the App for immediate assistance. Contact your local emergency services or a crisis helpline immediately.

    Support Helpline Number:
        Samaritans: 116 123
        Or contact your local GP

Privacy and User Responsibility:

    User Discretion: Users are responsible for their mental well-being and should exercise discretion when using the App. If the content or activities within the App cause distress, it is recommended to discontinue use.

By using Clayton, you acknowledge that you have read and understood this disclaimer. If you have concerns about your mental health, it is crucial to consult with a qualified professional. The App's developers and operators are not liable for any consequences resulting from the misuse or reliance on the App in lieu of professional advice."</string>
    <string name="distress_message">If you\'re feeling distressed, please reach out for support.</string>
    <string name="distress_message_contact">Call 116 123 to contact the Samaritans</string>
</resources>
